# folioman

./: .dockerignore  .gitignore  .gitpod.yml  .pre-commit-config.yaml  BUILD.md  LICENSE  Makefile  README.md  codecov.yml  compose.sh  docker-compose.local.yml  docker-compose.yml  openapi.json  pyproject.toml  render.yaml  renovate.json  run-celery-local.bat  run-celery-local.sh  run-local.bat  run-local.sh
.devcontainer/: devcontainer.json
.github/: dependabot.yml
api/: .env.local  Dockerfile  ReadMe.md  asgi.py  env.example  requirements.txt  settings.py  urls.py  views.py  wsgi.py
app/: manage.py  pyproject.toml
app/src/folioman_app/: __init__.py  _env.py  apps.py  mappers.py  middleware.py  scheduler.py  urls.py  wsgi.py
app/src/folioman_app/api/: __init__.py  auth.py  exports.py  families.py  health.py  imports.py  integrity.py  investors.py  jobs.py  main.py  meta.py  navs.py  reports.py  schemas.py  setup.py  tokens.py
app/src/folioman_app/licensing/: __init__.py  keys.py
app/src/folioman_app/management/commands/: backfill_navs.py  export_openapi.py  generate_license_keypair.py  reconcile_all.py  refresh_corporate_actions.py  refresh_navs.py  resolve_equity_symbols.py  run_scheduler.py  seed_demo.py  update_isin_db.py  valuation_tick_daily_extend.py  valuation_tick_pending.py
app/src/folioman_app/migrations/: 0001_initial.py  0002_investor_valuation_attempts_and_more.py  0003_securityintegritystatus_ledger_through_and_more.py  0004_security_nav_feed_closed.py  0005_transaction_cost_basis_complete.py  0006_partialblock.py  0007_importquarantine.py  0008_corporate_action_reference.py  0009_transaction_cost_total.py  0010_security_corporate_actions_synced_at.py  0011_purge_misfiled_corporate_actions.py  0012_alter_transaction_transaction_type.py  0013_appliedcorporateaction.py
app/src/folioman_app/models/: __init__.py  base.py  integrity.py  jobs.py  ledger.py  licensing.py  master.py
app/src/folioman_app/security/: __init__.py  checks.py  keys.py  pan.py
app/src/folioman_app/services/: __init__.py  corporate_actions.py  demerger_match.py  dividends.py  equity_identity.py  exports.py  fmv.py  identity_remap.py  imports.py  income.py  isin_db.py  jobs.py  navs.py  opening_lots.py  projected_ledger.py  tax_export.py  trading_calendar.py  valuation.py
app/src/folioman_app/settings/: __init__.py  _logging.py  _sqlite.py  base.py  desktop.py  server.py
app/src/folioman_app/tasks/: __init__.py  _upsert.py  corporate_action_ticks.py  import_cas.py  import_csv.py  import_ecas.py  isin_jobs.py  isin_ticks.py  reconcile.py  refresh_corporate_actions.py  refresh_navs.py  valuation_jobs.py  valuation_ticks.py
app/tests/: conftest.py  test_api_auth.py  test_api_capital_gains.py  test_api_exports.py  test_api_families.py  test_api_health.py  test_api_imports.py  test_api_integrity.py  test_api_investor_summary.py  test_api_investors.py  test_api_jobs.py  test_api_meta.py  test_api_navs.py  test_api_reports.py  test_api_scheme_detail.py  test_api_setup.py  test_api_value_series.py  test_apply_corporate_actions.py  test_backfill_navs.py  test_corporate_action_detect.py  test_demerger_parent_match.py  test_demo.py  test_dividends.py  test_e2e_cas_path.py  test_e2e_import_paths.py  test_equity_identity.py  test_equity_tradebook_e2e.py  test_export_data.py  test_fmv.py  test_import_cas.py  test_import_cas_smoke.py  test_import_csv.py  test_import_ecas.py  test_import_ecas_smoke.py  test_import_quarantine.py  test_income.py  test_isin_update.py  test_migrations.py  test_models_integrity_licensing.py  test_models_ledger.py  (+17 more)
app/tests/fixtures/zerodha/: README.md  tradebook-zerodha-2022-hdfc.csv  tradebook-zerodha-orphan-suzlon.csv
archive/: .gitpod.yml  (+1 more)
core/: pyproject.toml
core/src/folioman_core/: __init__.py  _dates.py  cas_reader.py  corporate_action_detect.py  corporate_action_subject.py  corporate_actions.py  dividend_attribution.py  ecas_parser.py  fifo.py  identity_remap.py  opening_lot.py  parser.py  reconciliation.py  valuation.py  xirr.py
core/src/folioman_core/models/: __init__.py  base.py  cas.py  corporate_action.py  currency_fields.py  decimal_fields.py  holding.py  investor.py  nav.py  quote.py  security.py  transaction.py
core/src/folioman_core/price_feeds/: __init__.py  amfi_bulk.py  captnemo.py  casparser_fmv.py  coingecko.py  corporate_actions_fetch.py  errors.py  mfapi.py  nse_bhavcopy.py  nse_bse.py  nse_bse_client.py  nse_history.py  yfinance_feed.py
core/src/folioman_core/tax/: __init__.py  india.py  ltcg_stcg.py  models.py  policy.py  schedule_112a.py
core/tests/: conftest.py  test_amfi_bulk.py  test_captnemo.py  test_cas.py  test_casparser_crosscheck.py  test_coingecko.py  test_corporate_action_detect.py  test_corporate_action_subject.py  test_corporate_actions.py  test_corporate_actions_fetch.py  test_coverage_gaps.py  test_decimal_fields.py  test_dividend_attribution.py  test_ecas_parser.py  test_fifo.py  test_holding.py  test_identity_remap.py  test_investor.py  test_mfapi.py  test_nse_bhavcopy.py  test_nse_bse.py  test_nse_bse_client.py  test_nse_history.py  test_opening_lot.py  test_package.py  test_parser.py  test_reconciliation.py  test_schedule_112a.py  test_security.py  test_smoke.py  test_tax_gains.py  test_tax_india.py  test_transaction.py  test_valuation.py  test_xirr.py  test_yfinance_feed.py
core/tests/fixtures/: ecas_statement.json  mf_cas_statement.json  schedule_112a_expected.json
desktop/: README.md  build.py  pyproject.toml
desktop/resources/: folioman.icns
desktop/src/folioman_desktop/: __init__.py  __main__.py  bootstrap.py  server.py  webview_api.py
desktop/src/folioman_desktop/scheduler/: __init__.py  install.py  linux.service  linux.timer  macos.plist  windows.xml
desktop/tests/: test_bootstrap.py  test_build_spec.py  test_launcher_dispatch.py  test_scheduler_install.py  test_server.py  test_webview_api.py
server/: .env.example  Dockerfile  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
server/src/folioman_server/: __init__.py  __main__.py
server/tests/: test_entry.py
(+275 files in other folders)
