[project]
name = "folioman-app"
version = "0.0.0"
description = "Folioman Django application: ORM models, Django Ninja API, services."
requires-python = ">=3.13"
dependencies = [
    "folioman-core",
    "django>=5.2,<5.3",
    "django-ninja>=1.3",
    "cryptography>=43",
    # Serves the built SPA (hashed assets) from one origin alongside the API, in
    # both desktop and server modes. Pure Python, so it bundles fine under Nuitka.
    "whitenoise>=6.6",
    # In-process background scheduler for day-wise valuation (no broker). Pure
    # Python (thread-based BackgroundScheduler), so it bundles fine under Nuitka.
    "apscheduler>=3.10,<4",
]

# Server-mode-only runtime deps. The desktop Nuitka build excludes these:
# a single-user SQLite desktop app needs neither Postgres nor JWT. Installed in
# the dev workspace via the root `server` dependency-group; in production via
# `pip install folioman-app[server]` for self-hosted / Docker deployments;
# gunicorn joins here later.
[project.optional-dependencies]
server = [
    "psycopg[binary]>=3.2",
    "django-ninja-jwt>=5.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/folioman_app"]

[tool.uv.sources]
folioman-core = { workspace = true }
