[project]
name = "folioman-app"
version = "1.0.0"
description = "Folioman Django application: ORM models, Django Ninja API, services."
license = "AGPL-3.0-or-later"
requires-python = ">=3.13"
dependencies = [
    "folioman-core",
    "django>=5.2.16,<5.3",
    "django-ninja>=1.3",
    "cryptography>=43",
    # Serves the built SPA (hashed assets) from one origin alongside the API, in
    # both desktop and server modes. Pure Python, so it bundles fine under Nuitka.
    "whitenoise>=6.6",
    # In-process background scheduler for day-wise valuation (no broker). Pure
    # Python (thread-based BackgroundScheduler), so it bundles fine under Nuitka.
    "apscheduler>=3.11.3,<4",
    # Per-OS user-data dir resolution (desktop settings). Pure Python, Nuitka-safe.
    "platformdirs>=4.0",
    # Structured logging: pretty, coloured console output in dev (rich renders
    # the tracebacks) and plain grep-able lines in the rotating files. Existing
    # stdlib logging.getLogger() call sites flow through unchanged via
    # ProcessorFormatter. Both pure Python, Nuitka-safe.
    "structlog>=24.4",
    "rich>=13.7",
    # 12-factor config: typed env reads + DATABASE_URL parsing (env.dj_db_url).
    # The [django] extra pulls dj-database-url. Pure Python, Nuitka-safe.
    "environs[django]>=15.0.1",
]

# Server-mode-only runtime deps. The desktop Nuitka build excludes these:
# a single-user SQLite desktop app needs neither Postgres, JWT, nor a WSGI
# server. Installed via `uv sync --extra server` in dev, or
# `pip install folioman-app[server]` for self-hosted / Docker deployments.
[project.optional-dependencies]
server = [
    "psycopg[binary]>=3.3.4",
    "django-ninja-jwt>=5.4",
    # WSGI server for the self-hosted deployment (gthread workers behind a
    # reverse proxy). Pure Python.
    "gunicorn>=23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/folioman_app"]

[tool.uv.sources]
folioman-core = { workspace = true }
