[project]
name = "folioman-core"
version = "0.0.0"
description = "Folioman shared domain logic: parsing, FIFO, XIRR, tax, reconciliation."
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.7",
    # Activated in Phase 2 (core domain library):
    # "casparser>=1.0",        # NOT on PyPI yet — PR #124 / 1.0 unreleased
    # "casparser-isin",
    # "requests",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/folioman_core"]
