[project]
name = "folioman-core"
version = "0.0.0"
description = "Folioman shared domain logic: parsing, FIFO, XIRR, tax, reconciliation."
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.7",
    "casparser",  # pinned to git feature/v1.0 via [tool.uv.sources] below (PR #124)
    "casparser-isin",
    "httpx>=0.27",  # MF NAV feed (mfapi.in); also covers the equity/crypto price feeds
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/folioman_core"]

# Develop against the casparser 1.0 branch (PR #124) until it
# releases on PyPI. On merge, drop this source and pin `casparser==1.0.0` in
# [project].dependencies, then re-lock.
[tool.uv.sources]
casparser = { git = "https://github.com/codereverser/casparser", branch = "feature/v1.0" }
