[project]
name = "folioman-core"
version = "1.0.0"
description = "Folioman shared domain logic: parsing, FIFO, XIRR, tax, reconciliation."
license = "AGPL-3.0-or-later"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.7",
    "casparser>=1.1.0",
    "casparser-isin>=2026.6.9",
    "httpx>=0.27",  # MF NAV feed (mfapi.in); also covers the equity/crypto price feeds
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/folioman_core"]
