[project]
name = "folioman-desktop"
version = "0.0.0"
description = "Folioman desktop launcher (PyWebView shell, packaged via Nuitka)."
requires-python = ">=3.13"
dependencies = [
    "folioman-app",
    # Activated in Phase 8 (desktop packaging):
    # "pywebview",
]

[project.optional-dependencies]
# Build-time only; activated in Phase 8.
build = [
    # "nuitka",
    # "ordered-set",
    # "zstandard",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/folioman_desktop"]

[tool.uv.sources]
folioman-app = { workspace = true }
