[project]
name = "folioman-desktop"
version = "0.0.0"
description = "Folioman desktop launcher (PyWebView shell, packaged via Nuitka)."
requires-python = ">=3.13"
dependencies = [
    "folioman-app",
    # Native window shell. Uses the OS webview (Cocoa/WebKit on macOS, WebKitGTK
    # on Linux, Edge WebView2 on Windows) — no bundled Chromium, so it stays light
    # under Nuitka. The per-OS GUI backend (pyobjc / pygobject / pythonnet) is
    # pulled in by pywebview's own platform extras at build time.
    "pywebview>=5.0",
]

[project.optional-dependencies]
# Build-time only; activated when desktop packaging lands.
build = [
    # "nuitka",
    # "ordered-set",
    # "zstandard",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/folioman_desktop"]

[tool.uv.sources]
folioman-app = { workspace = true }
