[project]
name = "folioman-desktop"
version = "0.0.0"
description = "Folioman desktop launcher (PyWebView shell, packaged via Nuitka)."
requires-python = ">=3.13"
dependencies = [
    "folioman-app",
    # Native window shell. Uses the OS webview (Cocoa/WebKit on macOS, WebKitGTK
    # on Linux, Edge WebView2 on Windows) — no bundled Chromium, so it stays light
    # under Nuitka. The per-OS GUI backend (pyobjc / pygobject / pythonnet) is
    # pulled in by pywebview's own platform extras at build time.
    "pywebview>=5.0",
]

[project.optional-dependencies]
# Build-time only — the Nuitka compiler toolchain (see desktop/build.py). Not a
# runtime dependency of the binary; installed with `uv sync --extra build` or
# `uv run --extra build python desktop/build.py`.
build = [
    "nuitka>=2.4",
    "ordered-set>=4.1",  # Nuitka uses it; pure-Python wheel avoids a build step
    "zstandard>=0.22",  # onefile payload compression
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/folioman_desktop"]

[tool.uv.sources]
folioman-app = { workspace = true }
