[project]
name = "folioman-server"
version = "0.0.0"
description = "Folioman self-hosted server entrypoint (gunicorn + Postgres + JWT)."
requires-python = ">=3.13"
dependencies = [
    "folioman-app",
    # Activated in Phase 9 (server / Docker / PM Pro):
    # "gunicorn",
    # "psycopg[binary]",
    # "django-ninja-jwt",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/folioman_server"]

[tool.uv.sources]
folioman-app = { workspace = true }
